--- a/README
+++ b/README
@@ -1,5 +1,1 @@
-These are the config files thus far and what they're for:
-
-vimrc			-vim
-conkyrc 		-conky
-.bashrc
+These are my config files that have been changed to my liking.
